po: update po/da_DK/pledge.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/da_DK/pledge.po
+++ b/po/da_DK/pledge.po
@@ -10,8 +10,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:09+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Danish (http://www.transifex.com/civicrm/civicrm/language/da/)\n"
 "MIME-Version: 1.0\n"
@@ -51,12 +51,12 @@ msgid "Pledge Payment Status"
 msgstr "Status for løftebetalinger"
 
 #: CRM/Pledge/BAO/PledgeBlock.php
-msgid "$%1 - due on %2 (overdue)"
-msgstr "$%1 - sat til %2 (overskredet)"
+msgid "%1 - due on %2 (overdue)"
+msgstr "%1 - sat til %2 (overskredet)"
 
 #: CRM/Pledge/BAO/PledgeBlock.php
-msgid "$%1 - due on %2"
-msgstr "$%1 - sat til %2"
+msgid "%1 - due on %2"
+msgstr "%1 - sat til %2"
 
 #: CRM/Pledge/BAO/PledgeBlock.php
 msgid ""
@@ -80,14 +80,6 @@ msgid "Pledge Frequency Interval"
 msgstr "Frekvensinterval for løfte"
 
 #: CRM/Pledge/BAO/Query.php
-msgid "Pledge Status %1"
-msgstr "Status for løfte %1"
-
-#: CRM/Pledge/BAO/Query.php
-msgid "Pledge Payment Status %1"
-msgstr "Status for løftets donation %1"
-
-#: CRM/Pledge/BAO/Query.php
 msgid "Pledge is a Test"
 msgstr "Løftet er en test"
 
@@ -98,6 +90,10 @@ msgstr "Finanstype - %1"
 #: CRM/Pledge/BAO/Query.php
 msgid "Financial Page - %1"
 msgstr "Finansiel side - %1"
+
+#: CRM/Pledge/BAO/Query.php
+msgid "Contact ID %1 %2"
+msgstr ""
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Pledge is a Test?"
@@ -147,10 +143,6 @@ msgstr "Ændringsdato for tilsagn"
 msgid "Pledge Cancelled Date"
 msgstr "Annulleringsdato for tilsagn"
 
-#: CRM/Pledge/DAO/Pledge.php
-msgid "Pledge Honor Contact"
-msgstr "Hæderskontakt for tilsagn"
-
 #: CRM/Pledge/DAO/Pledge.php CRM/Pledge/DAO/PledgeBlock.php
 msgid "Maximum Number of Reminders"
 msgstr "Maksimalt antal påmindelser"
@@ -189,12 +181,12 @@ msgid "Reminders Sent"
 msgstr "Påmindelser sendt"
 
 #: CRM/Pledge/Form/Payment.php
+msgid "Edit Scheduled Pledge Payment"
+msgstr "Redigér planlagte betalingstilsagn"
+
+#: CRM/Pledge/Form/Payment.php
 msgid "Pledge Payment Schedule has been updated."
 msgstr "Betalingsplan for tilsagn er blevet opdateret."
-
-#: CRM/Pledge/Form/Pledge.php templates/CRM/Pledge/Form/Pledge.tpl
-msgid "Pledge by"
-msgstr "Løfte med"
 
 #: CRM/Pledge/Form/Pledge.php templates/CRM/Pledge/Form/PledgeView.tpl
 #: xml/templates/message_templates/pledge_acknowledge_html.tpl
@@ -301,6 +293,10 @@ msgid "Pledger Name or Email"
 msgstr "Løftegivers navn eller e-mail"
 
 #: CRM/Pledge/Form/Search.php
+msgid "Pledger Name"
+msgstr ""
+
+#: CRM/Pledge/Form/Search.php
 msgid "Find Pledges"
 msgstr "Find løfter"
 
@@ -309,12 +305,10 @@ msgid "Delete Pledges"
 msgstr "Slettede løfter"
 
 #: CRM/Pledge/Form/Task/Delete.php
-msgid "Deleted Pledge(s): %1"
-msgstr "Slettede løfter: %1"
-
-#: CRM/Pledge/Form/Task/Delete.php
-msgid "Total Selected Pledge(s): %1"
-msgstr "Samlede valgte løfter: %1"
+msgid "%count pledge deleted."
+msgid_plural "%count pledges deleted."
+msgstr[0] "%count løfte om bidrag blev slettet."
+msgstr[1] "%count løfter om bidrag blev slettet."
 
 #: CRM/Pledge/Form/Task/Print.php
 msgid "Print Pledge List"
@@ -323,6 +317,30 @@ msgstr "Udskriv liste over løfter"
 #: CRM/Pledge/Info.php
 msgid "CiviCRM Pledge Engine"
 msgstr "CiviCRM-løfte-motor"
+
+#: CRM/Pledge/Info.php
+msgid "access CiviPledge"
+msgstr "tilgå CiviLøfte"
+
+#: CRM/Pledge/Info.php
+msgid "View pledges"
+msgstr "Vis løfter om bidrag"
+
+#: CRM/Pledge/Info.php
+msgid "edit pledges"
+msgstr "redigér løfter om bidrag"
+
+#: CRM/Pledge/Info.php
+msgid "Create and update pledges"
+msgstr "Opret og opdatér løfter om bidrag"
+
+#: CRM/Pledge/Info.php
+msgid "delete in CiviPledge"
+msgstr "slet i CiviLøfte"
+
+#: CRM/Pledge/Info.php
+msgid "Delete pledges"
+msgstr "Slet løfter om bidrag"
 
 #: CRM/Pledge/Info.php
 msgid "Your Pledge(s)"
@@ -340,11 +358,11 @@ msgid ""
 "pledge payments."
 msgstr "Annullering af dette løfte vil også annullere alle planlagte (og ikke gennemførte) betalinger."
 
-#: CRM/Pledge/Selector/Search.php templates/CRM/Pledge/Form/PledgeView.tpl
+#: CRM/Pledge/Selector/Search.php
 msgid "View Pledge"
 msgstr "Vis løfte"
 
-#: CRM/Pledge/Selector/Search.php templates/CRM/Pledge/Form/Pledge.tpl
+#: CRM/Pledge/Selector/Search.php
 msgid "Edit Pledge"
 msgstr "Rediger løfte"
 
@@ -352,7 +370,7 @@ msgstr "Rediger løfte"
 msgid "Cancel Pledge"
 msgstr "Fortyd løfte"
 
-#: CRM/Pledge/Selector/Search.php templates/CRM/Pledge/Form/Pledge.tpl
+#: CRM/Pledge/Selector/Search.php
 msgid "Delete Pledge"
 msgstr "Slet løfte"
 
@@ -373,20 +391,12 @@ msgid "Pledge Search"
 msgstr "Søg løfter"
 
 #: CRM/Pledge/Task.php
-msgid "Print Pledges"
-msgstr "Udskriv løfter"
-
-#: CRM/Pledge/Task.php
 msgid "Export Pledges"
 msgstr "Eksporter løfter"
 
 #: templates/CRM/Pledge/Form/Payment.tpl
-msgid "Edit Scheduled Pledge Payment"
-msgstr "Redigér planlagte betalingstilsagn"
-
-#: templates/CRM/Pledge/Form/Payment.tpl
-msgid "Scheduled Date for Pledge payment."
-msgstr "Planlagt dato for betaling af løfte"
+msgid "Adjust scheduled amount"
+msgstr "Tilret planlagt beløb"
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid ""
@@ -395,10 +405,6 @@ msgid ""
 " to be sent when this pledge is recorded, click Cancel and then click Edit "
 "from the Summary tab to add an email address before recording the pledge."
 msgstr "Du vil ikke være i stand til at sende en kvittering for dette løfte, fordi der ikke er nogen e-mailadresse for denne kontakt. Hvis du ønsker at sende en kvittering, når dette løfte er registreret, skal du klikke på Annullér og derefter klikke på Redigér i fanen for at tilføje en e-mailadresse, før du gemmer løftet."
-
-#: templates/CRM/Pledge/Form/Pledge.tpl
-msgid "New Pledge"
-msgstr "Nyt tilsagn"
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid ""
@@ -415,6 +421,10 @@ msgid ""
 msgstr "Overvej at annullere løftet i stedet, hvis du ønsker at bevare en revisionsforløb og undgå at miste betalingsdata. For at angive løfte-status til Annulleret og annullere endnu ikke betalte betalingstilsagn, så klik Annullér i denne formular. Klik dernæst henvisningen mere &gt; fra løfte-listen, og vælg Annullér-handlingen."
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
+msgid "Pledge by"
+msgstr "Løfte med"
+
+#: templates/CRM/Pledge/Form/Pledge.tpl
 #: templates/CRM/Pledge/Form/PledgeView.tpl
 msgid ""
 " Pledge total has changed due to payment adjustments. Original pledge amount"
@@ -422,6 +432,7 @@ msgid ""
 msgstr " Samlet løfte er ændret som følge af tilpasning af betalinger. Det oprindelige tilsagn var %1."
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
+#: templates/CRM/Pledge/Form/PledgeView.tpl
 msgid "installments of"
 msgstr "rater af"
 
@@ -444,10 +455,6 @@ msgstr "Dato for den første betaling."
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid "Automatically email an acknowledgment of this pledge to %1?"
 msgstr "E-mail automatisk en kvittering for dette løfte til %1?"
-
-#: templates/CRM/Pledge/Form/Pledge.tpl
-msgid "Automatically email an acknowledgment of this pledge to "
-msgstr "Send en e-mail automatisk med kvittering for dette løfte til"
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid "Date when an acknowledgment of the pledge was sent."
@@ -473,20 +480,12 @@ msgstr "Løfter \"afventer\" indtil den første betaling er modtaget. Når en be
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid ""
-"Click OK to save this Pledge record AND send an acknowledgment to %1 now"
-msgstr "Klik OK for at gemme dette Løfte OG sende en kvittering til %1 nu"
+"Click OK to save this Pledge record AND send an acknowledgment to %1 now."
+msgstr "Klik OK for at gemme denne post om løfte OG sende en kvittering til %1 nu."
 
 #: templates/CRM/Pledge/Form/PledgeView.tpl
 msgid "Pledge By"
 msgstr "Løfte givet af"
-
-#: templates/CRM/Pledge/Form/PledgeView.tpl
-msgid " installments of "
-msgstr " rater af "
-
-#: templates/CRM/Pledge/Form/PledgeView.tpl
-msgid " every "
-msgstr " hver "
 
 #: templates/CRM/Pledge/Form/PledgeView.tpl
 msgid "Payment Start"
@@ -513,10 +512,6 @@ msgid "Payments Ended Date"
 msgstr "Datoen betalingerne sluttede"
 
 #: templates/CRM/Pledge/Form/Search/EmptyResults.tpl
-msgid "No matching pledge results found."
-msgstr "Ingen matchende Løfter blev fundet."
-
-#: templates/CRM/Pledge/Form/Search/EmptyResults.tpl
 msgid ""
 "If you are searching by pledger name, check your spelling or use fewer "
 "letters."
@@ -529,8 +524,16 @@ msgid ""
 msgstr "Hvis du søger inden for dato- eller beløbsinterval, så forsøg et større interval af værdier."
 
 #: templates/CRM/Pledge/Form/Selector.tpl
-msgid "Click %1 to view pledge payments."
-msgstr "Klik %1 for at vise Løfte betalinger."
+msgid "Click arrow to view pledge payments."
+msgstr "Klik pilen for at vise Løfte-betalinger."
+
+#: templates/CRM/Pledge/Form/Selector.tpl
+msgid "Show payments"
+msgstr "Vis betalinger"
+
+#: templates/CRM/Pledge/Form/Selector.tpl
+msgid "Hide payments"
+msgstr "Skjul betalinger"
 
 #: templates/CRM/Pledge/Form/Selector.tpl
 msgid "Find more pledges"
@@ -550,10 +553,6 @@ msgstr "Er forfalden til"
 #: templates/CRM/Pledge/Form/Task/Print.tpl
 msgid "Begining Date"
 msgstr "Startdato"
-
-#: templates/CRM/Pledge/Form/Task/SearchTaskHookSample.tpl
-msgid "Pledge made"
-msgstr "Løfte givet"
 
 #: templates/CRM/Pledge/Form/Task.tpl
 msgid "Number of selected pledges: %1"
@@ -604,20 +603,12 @@ msgid "Amount Paid"
 msgstr "Betalt beløb"
 
 #: templates/CRM/Pledge/Page/Payment.tpl
-msgid "<a href='%1'>View Payment</a>"
-msgstr "<a href='%1'>Vis Betaling</a>"
+msgid "Credit Card Payment"
+msgstr "Betaling med kreditkort"
 
 #: templates/CRM/Pledge/Page/Payment.tpl
-msgid "<a href='%1'>Record Payment (Check, Cash, EFT ...)</a>"
-msgstr "<a href='%1'>Gennemfør betaling (Check, kontant...)</a>"
-
-#: templates/CRM/Pledge/Page/Payment.tpl
-msgid "<a href='%1'>Submit Credit Card Payment</a>"
-msgstr "<a href='%1'>Indsend kreditkort betaling</a>"
-
-#: templates/CRM/Pledge/Page/Payment.tpl
-msgid "<a href='%1'>Edit Scheduled Payment</a>"
-msgstr "<a href='%1'>Redigér planlagt betaling</a>"
+msgid "Edit Scheduled Payment"
+msgstr "Redigér planlagt betaling"
 
 #: templates/CRM/Pledge/Page/Tab.hlp
 msgid "Payment Reminders"
@@ -637,9 +628,10 @@ msgstr "For at påmindelser kan sendes:"
 
 #: templates/CRM/Pledge/Page/Tab.hlp
 msgid ""
-"Your site administrator must configure the provided script which updates "
-"pledge payment statuses and sends the reminders (UpdatePledgeRecord.php)."
-msgstr "Din hjemmesideadministrator skal konfigurere det medfølgende script, som opdaterer Løfter og sender påmindelser (UpdatePledgeRecord.php)."
+"Your site administrator must configure the scheduled job (Administer > "
+"System Settings > Scheduled Jobs) which updates pledge payment statuses and "
+"sends the reminders."
+msgstr "Din hjemmesideadministrator skal konfigurere den planlagte jobkørsel (Administrér > Systemindstillinger > Planlagte job), der opdaterede statussser for lovede betalinger og udsender påmindelserne."
 
 #: templates/CRM/Pledge/Page/Tab.hlp
 msgid ""
@@ -659,13 +651,17 @@ msgstr "Løfter modtaget fra %1 siden begyndelsen."
 
 #: templates/CRM/Pledge/Page/Tab.tpl
 msgid ""
-"Click <a href='%1'>Add Pledge</a> to record a new pledge received from this "
+"Click <a %1>Add Pledge</a> to record a new pledge received from this "
 "contact."
-msgstr "Klik på <a href='%1'>Tilføj Løfte</a> at gemme et nyt Løfte fra denne kontakt."
+msgstr "Klik på <a %1>Tilføj Løfte</a> for at gemme et nyt Løfte, modtaget fra denne kontakt."
 
 #: templates/CRM/Pledge/Page/Tab.tpl
 msgid "No pledges have been recorded from this contact."
 msgstr "Ingen løfter er blevet gemt fra denne kontakt."
+
+#: templates/CRM/Pledge/Page/Tab.tpl
+msgid "Contributions made in honor of %1"
+msgstr ""
 
 #: templates/CRM/Pledge/Page/UserDashboard.tpl
 msgid "Make Payment"
@@ -791,94 +787,38 @@ msgstr "Tak for din generøse støtte."
 msgid "Pledge Payment Reminder"
 msgstr "Påmindelse om betaling af bidrag."
 
-#: CRM/Pledge/BAO/PledgeBlock.php
-msgid "%1 - due on %2 (overdue)"
-msgstr "%1 - sat til %2 (overskredet)"
-
-#: CRM/Pledge/BAO/PledgeBlock.php
-msgid "%1 - due on %2"
-msgstr "%1 - sat til %2"
-
-#: CRM/Pledge/Form/Task/Delete.php
-msgid "Deleted Pledge(s): %1 (Total Selected: %2) "
-msgstr "Slettet løfte(r): %1 (Valgt i alt: %2)"
-
-#: templates/CRM/Pledge/Form/Payment.tpl
-msgid "Adjust scheduled amount"
-msgstr "Tilret planlagt beløb"
-
-#: templates/CRM/Pledge/Form/Pledge.tpl
-msgid ""
-"Click OK to save this Pledge record AND send an acknowledgment to %1 now."
-msgstr "Klik OK for at gemme denne post om løfte OG sende en kvittering til %1 nu."
-
-#: templates/CRM/Pledge/Form/Selector.tpl
-msgid "Click arrow to view pledge payments."
-msgstr "Klik pilen for at vise Løfte-betalinger."
-
-#: templates/CRM/Pledge/Form/Selector.tpl
-msgid "Show payments"
-msgstr "Vis betalinger"
-
-#: templates/CRM/Pledge/Form/Selector.tpl
-msgid "Hide payments"
-msgstr "Skjul betalinger"
-
-#: templates/CRM/Pledge/Page/Payment.tpl
-msgid "Credit Card Payment"
-msgstr "Betaling med kreditkort"
-
-#: templates/CRM/Pledge/Page/Payment.tpl
-msgid "Edit Scheduled Payment"
-msgstr "Redigér planlagt betaling"
-
-#: templates/CRM/Pledge/Page/Tab.hlp
-msgid ""
-"Your site administrator must configure the scheduled job (Administer > "
-"System Settings > Scheduled Jobs) which updates pledge payment statuses and "
-"sends the reminders."
-msgstr "Din hjemmesideadministrator skal konfigurere den planlagte jobkørsel (Administrér > Systemindstillinger > Planlagte job), der opdaterede statussser for lovede betalinger og udsender påmindelserne."
-
-#: templates/CRM/Pledge/Page/Tab.tpl
-msgid ""
-"Click <a %1>Add Pledge</a> to record a new pledge received from this "
-"contact."
-msgstr "Klik på <a %1>Tilføj Løfte</a> for at gemme et nyt Løfte, modtaget fra denne kontakt."
+#: CRM/Pledge/BAO/Query.php
+msgid "Pledge Acknowledgement Sent"
+msgstr ""
 
 #: CRM/Pledge/BAO/Query.php
-msgid "Contact ID %1 %2"
+msgid "Pledge Acknowledgement  Not Sent"
 msgstr ""
 
-#: CRM/Pledge/Form/Search.php
-msgid "Pledger Name"
+#: CRM/Pledge/BAO/Query.php
+msgid "Acknowledgement sent?"
 msgstr ""
 
-#: CRM/Pledge/Form/Task/Delete.php
-msgid "%count pledge deleted."
-msgid_plural "%count pledges deleted."
-msgstr[0] "%count løfte om bidrag blev slettet."
-msgstr[1] "%count løfter om bidrag blev slettet."
+#: CRM/Pledge/BAO/Query.php
+msgid "Please enter a number"
+msgstr ""
 
-#: CRM/Pledge/Info.php
-msgid "access CiviPledge"
-msgstr "tilgå CiviLøfte"
+#: CRM/Pledge/BAO/Query.php
+msgid "Please enter number."
+msgstr ""
 
-#: CRM/Pledge/Info.php
-msgid "View pledges"
-msgstr "Vis løfter om bidrag"
+#: CRM/Pledge/DAO/PledgeBlock.php
+msgid "Pledge Block ID"
+msgstr ""
 
-#: CRM/Pledge/Info.php
-msgid "edit pledges"
-msgstr "redigér løfter om bidrag"
+#: CRM/Pledge/DAO/PledgeBlock.php
+msgid "Expose Frequency Interval?"
+msgstr ""
 
-#: CRM/Pledge/Info.php
-msgid "Create and update pledges"
-msgstr "Opret og opdatér løfter om bidrag"
+#: CRM/Pledge/Task.php
+msgid "Export pledges"
+msgstr ""
 
-#: CRM/Pledge/Info.php
-msgid "delete in CiviPledge"
-msgstr "slet i CiviLøfte"
-
-#: CRM/Pledge/Info.php
-msgid "Delete pledges"
-msgstr "Slet løfter om bidrag"
+#: templates/CRM/Pledge/Form/Task/Print.tpl
+msgid "Beginning Date"
+msgstr ""
