po: update po/de_DE/batch.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/de_DE/batch.po
+++ b/po/de_DE/batch.po
@@ -13,9 +13,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-21 10:22+0000\n"
-"Last-Translator: Martin Peth <peth@systopia.de>\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:11+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -38,6 +38,10 @@ msgstr "Transaktionen ansehen/hinzufügen"
 #: CRM/Batch/BAO/Batch.php
 msgid "Re-open Batch"
 msgstr "Batch wiedereröffnen"
+
+#: CRM/Batch/BAO/Batch.php
+msgid "Delete Batch"
+msgstr ""
 
 #: CRM/Batch/BAO/Batch.php
 msgid "Download Batch"
@@ -64,12 +68,52 @@ msgid "No export format selected."
 msgstr "Es wurde kein Exportformat ausgewählt."
 
 #: CRM/Batch/DAO/Batch.php
-msgid "Exported Date"
-msgstr "Exportiert am"
+msgid "Batch ID"
+msgstr "Batch-ID"
 
-#: CRM/Batch/Form/Batch.php
-msgid "Number of items"
-msgstr "Anzahl Buchungen"
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Description"
+msgstr "Batch-Beschreibung"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Created By"
+msgstr "Batch erstellt von"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Created Date"
+msgstr "Batch Erstellungsdatum"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Modified By"
+msgstr "Batch geändert durch"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Modified Date"
+msgstr "Batch geändert am"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Smart Group"
+msgstr ""
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Total"
+msgstr "Batch-Gesamtsumme"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Number of Items"
+msgstr "Anzahl Zahlungen im Batch"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Payment Instrument"
+msgstr ""
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Exported Date"
+msgstr ""
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Data"
+msgstr ""
 
 #: CRM/Batch/Form/Batch.php
 msgid "Batch Deleted"
@@ -88,6 +132,10 @@ msgid "Batch Data Entry for Memberships"
 msgstr "Stapelverarbeitungssatz für Mitgliedschaften"
 
 #: CRM/Batch/Form/Entry.php
+msgid "Batch Data Entry for Pledge Payments"
+msgstr ""
+
+#: CRM/Batch/Form/Entry.php
 msgid "Ignore Mismatch & Process the Batch?"
 msgstr "Ignoriere unpassende Einstellungen und verarbeite den Batch durch?"
 
@@ -96,16 +144,16 @@ msgid "Validate & Process the Batch"
 msgstr "Batch prüfen und verarbeiten"
 
 #: CRM/Batch/Form/Entry.php
-msgid "Some fields have been excluded."
-msgstr "Einige Felder wurden ausgeschlossen."
-
-#: CRM/Batch/Form/Entry.php
 msgid "Soft credit amount should not be greater than the total amount"
 msgstr "Der Betrag des \"Soft Credit\" darf nicht höher sein als die vorhanden Summe."
 
 #: CRM/Batch/Form/Entry.php
 msgid "Membership type is a required field."
 msgstr "Mitgliedsschaftstyp ist ein Pflichtfeld."
+
+#: CRM/Batch/Form/Entry.php
+msgid "You can not record two payments for the same pledge in a single batch."
+msgstr ""
 
 #: CRM/Batch/Form/Entry.php templates/CRM/Batch/Form/Entry.tpl
 msgid ""
@@ -154,6 +202,10 @@ msgstr "Erwartete Gesamtsumme"
 msgid "Total amount entered"
 msgstr "Eingegebene Gesamtsumme"
 
+#: templates/CRM/Batch/Form/Entry.tpl
+msgid "Open Pledges (Due Date - Amount)"
+msgstr ""
+
 #: templates/CRM/Batch/Form/Search.tpl
 msgid "Data Entry Batches"
 msgstr "Batches"
@@ -175,65 +227,36 @@ msgid "No Data Entry Batches have been created for this site."
 msgstr "Es wurden noch keine Batches erstellt."
 
 #: CRM/Batch/DAO/Batch.php
-msgid "Batch ID"
-msgstr "Batch-ID"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Title"
-msgstr "Batch-Titel"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Description"
-msgstr "Batch-Beschreibung"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Created By"
-msgstr "Batch erstellt von"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Created Date"
-msgstr "Batch Erstellungsdatum"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Modified By"
-msgstr "Batch geändert durch"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Modified Date"
-msgstr "Batch geändert am"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Smart Group"
+msgid "Batch Payment Method"
 msgstr ""
 
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Total"
-msgstr "Batch-Gesamtsumme"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Number of Items"
-msgstr "Anzahl Zahlungen im Batch"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Payment Instrument"
+#: CRM/Batch/DAO/EntityBatch.php
+msgid "EntityBatch ID"
 msgstr ""
 
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Exported Date"
-msgstr ""
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Data"
+#: CRM/Batch/DAO/EntityBatch.php
+msgid "EntityBatch Table"
 msgstr ""
 
 #: CRM/Batch/Form/Entry.php
-msgid "Batch Data Entry for Pledge Payments"
-msgstr ""
-
-#: CRM/Batch/Form/Entry.php
-msgid "You can not record two payments for the same pledge in a single batch."
+msgid ""
+"File or Autocomplete-Select type field(s) in the selected profile are not "
+"supported for Update multiple records."
 msgstr ""
 
 #: templates/CRM/Batch/Form/Entry.tpl
-msgid "Open Pledges (Due Date - Amount)"
+msgid ""
+"Click Validate & Process below when you've entered all items for the batch. "
+"You can also Save & Continue Later at any time."
+msgstr ""
+
+#: templates/CRM/Batch/Form/Entry.tpl
+msgid ""
+"Add, remove or change the order of columns by editing the corresponding <a "
+"href=\"%1\" target=\"_blank\">Bulk Entry profile</a>."
+msgstr ""
+
+#: templates/CRM/Batch/Form/Entry.tpl
+msgid ""
+"Custom fields and a Personal Campaign Page field can be added if needed."
 msgstr ""
