--- a/po/de_DE/campaign.po
+++ b/po/de_DE/campaign.po
@@ -9,10 +9,10 @@
 # Ettore Atalan <atalanttore@googlemail.com>, 2014-2015
 # Fabian <schuttenberg@systopia.de>, 2014-2016
 # Hartmut Holzgraefe <hartmut@php.net>, 2011
-# MichaSeidler <info@euroconsults.eu>, 2011
+# Michal Seidler, 2011
 # Jo <jo@caj-augsburg.de>, 2012
 # NeoAlpha <lars.schmidt@neo-alpha.org>, 2011
-# Martin Peth <peth@systopia.de>, 2015
+# Martin Peth <peth@systopia.de>, 2015-2016
 # Rolf Schumann <rolf.schumann@robinwood.de>, 2015
 # Ronny Weise <inactive+civi_uebersetzer@transifex.com>, 2013
 # Fabian <schuttenberg@systopia.de>, 2013
@@ -20,9 +20,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-08 09:03+0000\n"
-"Last-Translator: Fabian <schuttenberg@systopia.de>\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-17 10:39+0000\n"
+"Last-Translator: Martin Peth <peth@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -40,6 +40,10 @@ msgstr "Frühere Kampagnen"
 
 #: CRM/Campaign/BAO/Petition.php
 msgid "No survey sid parameter. Cannot process signature."
+msgstr ""
+
+#: CRM/Campaign/BAO/Petition.php
+msgid "Petition Id and/or Activity Id is not of the type Positive."
 msgstr ""
 
 #: CRM/Campaign/BAO/Query.php
@@ -97,16 +101,8 @@ msgid "Campaign End Date"
 msgstr "Enddatum der Kampagne"
 
 #: CRM/Campaign/DAO/Campaign.php
-msgid "Campaign Type ID"
-msgstr "Kampagnentyp ID"
-
-#: CRM/Campaign/DAO/Campaign.php
-msgid "Campaign Status ID"
-msgstr "Kampagnenstatus ID"
-
-#: CRM/Campaign/DAO/Campaign.php
-msgid "Campaign External Identifier"
-msgstr "externe Kampagnen-ID"
+msgid "Campaign External ID"
+msgstr ""
 
 #: CRM/Campaign/DAO/Campaign.php
 msgid "Parent Campaign"
@@ -140,21 +136,25 @@ msgstr "Kampagnenziele"
 msgid "Goal Revenue"
 msgstr "Ziel Einnahme"
 
-#: CRM/Campaign/DAO/Survey.php CRM/Campaign/Form/Survey/Results.php
-#: templates/CRM/Campaign/Form/ResultOptions.tpl
-#: templates/CRM/Campaign/Form/Search/Survey.tpl
-msgid "Recontact Interval"
-msgstr "Intervall für wiederholte Kontaktierung"
+#: CRM/Campaign/DAO/Survey.php templates/CRM/Campaign/Form/Search/Survey.tpl
+msgid "Survey ID"
+msgstr "<b>Umfrage</b> ID"
+
+#: CRM/Campaign/DAO/Survey.php
+msgid "Survey Campaign ID"
+msgstr ""
+
+#: CRM/Campaign/DAO/Survey.php
+msgid "Follow up Interval"
+msgstr ""
 
 #: CRM/Campaign/DAO/Survey.php
 msgid "Instructions"
 msgstr "Hinweise"
 
-#: CRM/Campaign/DAO/Survey.php templates/CRM/Campaign/Form/Search/Survey.tpl
-#: templates/CRM/Campaign/Page/Petition.tpl
-#: templates/CRM/Campaign/Page/Survey.tpl
-msgid "Release Frequency"
-msgstr "Freigabe-Frist"
+#: CRM/Campaign/DAO/Survey.php
+msgid "Survey Hold Duration"
+msgstr ""
 
 #: CRM/Campaign/DAO/Survey.php
 msgid "Maximum number of contacts"
@@ -165,20 +165,32 @@ msgid "Default number of contacts"
 msgstr "Vorgabewert für Kontakte"
 
 #: CRM/Campaign/DAO/Survey.php
-msgid "Last Modified Date"
-msgstr "Datum der letzten Änderung"
+msgid "Survey Is Active"
+msgstr ""
 
 #: CRM/Campaign/DAO/Survey.php
-msgid "Bypass Confirm"
-msgstr "Bestätigung überspringen"
+msgid "Is Default Survey"
+msgstr ""
+
+#: CRM/Campaign/DAO/Survey.php
+msgid "Survey Created By"
+msgstr ""
+
+#: CRM/Campaign/DAO/Survey.php
+msgid "Survey Modified"
+msgstr ""
+
+#: CRM/Campaign/DAO/Survey.php
+msgid "Survey Modified On"
+msgstr ""
+
+#: CRM/Campaign/DAO/Survey.php
+msgid "No Email Verification"
+msgstr ""
 
 #: CRM/Campaign/Form/Campaign.php
 msgid "Edit Campaign"
 msgstr "Kampagne bearbeiten"
-
-#: CRM/Campaign/Form/Campaign.php
-msgid "Parent Id"
-msgstr "Eltern ID"
 
 #: CRM/Campaign/Form/Campaign.php
 msgid "- select Parent -"
@@ -334,7 +346,10 @@ msgid "Instructions for interviewers"
 msgstr "Instruktionen für die Interviewer"
 
 #: CRM/Campaign/Form/Survey/Main.php
-msgid "Release frequency"
+#: templates/CRM/Campaign/Form/Search/Survey.tpl
+#: templates/CRM/Campaign/Page/Petition.tpl
+#: templates/CRM/Campaign/Page/Survey.tpl
+msgid "Release Frequency"
 msgstr "Freigabe-Frist"
 
 #: CRM/Campaign/Form/Survey/Main.php
@@ -377,16 +392,18 @@ msgid "Create new result set"
 msgstr ""
 
 #: CRM/Campaign/Form/Survey/Results.php
-msgid "Create a new result set"
-msgstr ""
-
-#: CRM/Campaign/Form/Survey/Results.php
 msgid "Use existing result set"
 msgstr "Benutze existierendes Ergebnis-Set"
 
 #: CRM/Campaign/Form/Survey/Results.php
 msgid "Select Result Set"
 msgstr "Wähle Ergebnis-Set"
+
+#: CRM/Campaign/Form/Survey/Results.php
+#: templates/CRM/Campaign/Form/ResultOptions.tpl
+#: templates/CRM/Campaign/Form/Search/Survey.tpl
+msgid "Recontact Interval"
+msgstr "Intervall für wiederholte Kontaktierung"
 
 #: CRM/Campaign/Form/Survey/Results.php
 msgid "Enter at least one result option."
@@ -403,10 +420,6 @@ msgstr ""
 #: CRM/Campaign/Form/Survey/TabHeader.php
 msgid "Main Information"
 msgstr "Hauptinformation"
-
-#: CRM/Campaign/Form/Survey/TabHeader.php
-msgid "Results"
-msgstr "Ergebnisse"
 
 #: CRM/Campaign/Form/Survey.php
 msgid "Configure Survey - %1"
@@ -473,12 +486,20 @@ msgid "We could not found respondent for this survey to release."
 msgstr "Es konnten keine freizugebenden Interviewpartner für diese Befragung gefunden werden."
 
 #: CRM/Campaign/Form/Task/Release.php
-msgid "%1 respondent(s) have been released."
-msgstr "%1 Interviewpartner wurden freigegebenden."
+msgid "Respondent has been released."
+msgid_plural "%count respondents have been released."
+msgstr[0] ""
+msgstr[1] ""
 
 #: CRM/Campaign/Form/Task/Release.php
-msgid "%1 respondents did not release."
+msgid "Released"
 msgstr ""
+
+#: CRM/Campaign/Form/Task/Release.php
+msgid "1 respondent did not release."
+msgid_plural "%count respondents did not release."
+msgstr[0] ""
+msgstr[1] ""
 
 #: CRM/Campaign/Form/Task/Reserve.php
 msgid "Could not find Survey Id."
@@ -494,8 +515,11 @@ msgid ""
 msgstr ""
 
 #: CRM/Campaign/Form/Task/Reserve.php
-msgid "You can reserve a maximum of %1 contact(s) at a time for this survey."
-msgstr ""
+msgid "You can reserve a maximum of %count contact at a time for this survey."
+msgid_plural ""
+"You can reserve a maximum of %count contacts at a time for this survey."
+msgstr[0] ""
+msgstr[1] ""
 
 #: CRM/Campaign/Form/Task/Reserve.php
 #: templates/CRM/Campaign/Form/Task/Reserve.tpl
@@ -516,31 +540,86 @@ msgid "Respondent Reservation"
 msgstr "Reservierung von zu Befragenden"
 
 #: CRM/Campaign/Form/Task/Reserve.php
-msgid "%1 Contact(s) have been reserved."
-msgstr ""
+msgid "%count contact has been reserved."
+msgid_plural "%count contacts have been reserved."
+msgstr[0] ""
+msgstr[1] ""
 
 #: CRM/Campaign/Form/Task/Reserve.php
-msgid "Respondent(s) has been added to %1 group(s)."
-msgstr "Interviewpartner wurde(n) zur Gruppe(n) %1 hinzugefügt."
+msgid "They have been added to %1."
+msgstr ""
 
 #: CRM/Campaign/Form/Task/Reserve.php
 msgid "Reservation Added"
 msgstr "Reservierung hinzugefügt"
 
 #: CRM/Campaign/Form/Task/Reserve.php
-msgid "Reservation did not add for %1 contact(s)."
+msgid "Reservation did not add for %count contact."
+msgid_plural "Reservation did not add for %count contacts."
+msgstr[0] ""
+msgstr[1] ""
+
+#: CRM/Campaign/Info.php
+msgid "administer CiviCampaign"
+msgstr ""
+
+#: CRM/Campaign/Info.php
+msgid "Create new campaign, survey and petition types and their status"
+msgstr ""
+
+#: CRM/Campaign/Info.php
+msgid "manage campaign"
+msgstr ""
+
+#: CRM/Campaign/Info.php
+msgid "Create new campaigns, surveys and petitions, reserve respondents"
+msgstr ""
+
+#: CRM/Campaign/Info.php
+msgid "reserve campaign contacts"
+msgstr ""
+
+#: CRM/Campaign/Info.php
+msgid "Reserve campaign contacts for surveys and petitions"
+msgstr ""
+
+#: CRM/Campaign/Info.php
+msgid "release campaign contacts"
+msgstr ""
+
+#: CRM/Campaign/Info.php
+msgid "Release reserved campaign contacts for surveys and petitions"
+msgstr ""
+
+#: CRM/Campaign/Info.php
+msgid "interview campaign contacts"
+msgstr ""
+
+#: CRM/Campaign/Info.php
+msgid "Record survey and petition responses from their reserved contacts"
+msgstr ""
+
+#: CRM/Campaign/Info.php
+msgid "GOTV campaign contacts"
+msgstr ""
+
+#: CRM/Campaign/Info.php
+msgid "Record that contacts voted"
+msgstr ""
+
+#: CRM/Campaign/Info.php
+msgid "sign CiviCRM Petition"
 msgstr ""
 
 #: CRM/Campaign/Page/AJAX.php
 msgid "Respondent Reserved."
 msgstr ""
 
-#: CRM/Campaign/Page/AJAX.php
-msgid "Vote Recorded"
+#: CRM/Campaign/Page/AJAX.php templates/CRM/Campaign/Form/Gotv.tpl
+msgid "Vote Recorded."
 msgstr ""
 
-#: CRM/Campaign/Page/Campaign.php CRM/Campaign/Page/DashBoard.php
-#: templates/CRM/Campaign/Form/Campaign.tpl
+#: CRM/Campaign/Page/Campaign.php templates/CRM/Campaign/Form/Campaign.tpl
 msgid "Are you sure you want to delete this Campaign?"
 msgstr "Wollen Sie diese Kampagne wirklich löschen?"
 
@@ -606,6 +685,12 @@ msgid "Search Survey"
 msgstr "Befragung suchen"
 
 #: CRM/Campaign/Page/DashBoard.php
+msgid "1 Day"
+msgid_plural "%count Days"
+msgstr[0] ""
+msgstr[1] ""
+
+#: CRM/Campaign/Page/DashBoard.php
 msgid "view result set"
 msgstr ""
 
@@ -658,10 +743,6 @@ msgid "Save as non voted."
 msgstr ""
 
 #: templates/CRM/Campaign/Form/Gotv.tpl
-msgid "Vote Recorded."
-msgstr ""
-
-#: templates/CRM/Campaign/Form/Gotv.tpl
 msgid "Vote Cancelled."
 msgstr "Abstimmung abgebrochen."
 
@@ -681,9 +762,15 @@ msgstr "Sie haben diese Petition bereits unterzeichnet."
 
 #: templates/CRM/Campaign/Form/Petition/Signature.tpl
 msgid ""
-"You have already signed this petition but you still <b>need to verify your email address</b>.</br>\n"
-"Please check your email inbox for the confirmation email. If you don't find it, verify if it isn't in your spam folder."
-msgstr "Sie haben diese Petition schon unterschrieben, aber Sie <b>müssen Ihre E-Mail-Adresse bestätigen</b>.</br>\nSuchen Sie bitte unsere Bestätigungs-E-Mail in Ihrem E-Mail-Posteingang. Sollten Sie sie nicht finden, schauen Sie auch in Ihrem Junk-Ordner nach."
+"You have already signed this petition but you still <b>need to verify your "
+"email address</b>."
+msgstr "Sie haben diese Petition schon unterzeichnet, aber Sie <b>müssen immer noch Ihre E-Mail-Adresse bestätigen</b>."
+
+#: templates/CRM/Campaign/Form/Petition/Signature.tpl
+msgid ""
+"Please check your email inbox for the confirmation email. If you don't find "
+"it, verify if it isn't in your spam folder."
+msgstr "Suchen Sie bitte in Ihren E-Mail-Posteingang nach der Bestätigungs-E-Mail. Wenn Sie sie nicht finden, schauen Sie nach, ob sie nicht in Ihrem Junk-Ordner ist."
 
 #: templates/CRM/Campaign/Form/Petition.tpl
 msgid "Are you sure you want to delete this Petition?"
@@ -703,6 +790,10 @@ msgstr ""
 #: templates/CRM/Campaign/Form/Petition.tpl
 msgid "Fields about the petition."
 msgstr "Felder über die Petition."
+
+#: templates/CRM/Campaign/Form/Petition.tpl
+msgid "Click here for new profile"
+msgstr ""
 
 #: templates/CRM/Campaign/Form/Petition.tpl
 msgid "This title will be displayed at the top of the thank-you page."
@@ -744,10 +835,6 @@ msgid ""
 msgstr ""
 
 #: templates/CRM/Campaign/Form/Search/Campaign.tpl
-msgid "No campaigns found."
-msgstr "Keine Kampagne gefunden."
-
-#: templates/CRM/Campaign/Form/Search/Campaign.tpl
 #: templates/CRM/Campaign/Page/Campaign.tpl
 msgid "Add Campaign"
 msgstr "Kampagne hinzufügen"
@@ -761,16 +848,8 @@ msgid "Status ID"
 msgstr "Status ID"
 
 #: templates/CRM/Campaign/Form/Search/EmptyResults.tpl
-msgid "No matching respondent found."
-msgstr "Keine passenden Interviewpartner gefunden."
-
-#: templates/CRM/Campaign/Form/Search/EmptyResults.tpl
 msgid "if you are searching by respondent name, check your spelling"
 msgstr "Wenn Sie nach Interviewpartnern suchen, überprüfen Sie bitte die Schreibweise."
-
-#: templates/CRM/Campaign/Form/Search/Petition.tpl
-msgid "No petitions found."
-msgstr "Keine Petition gefunden."
 
 #: templates/CRM/Campaign/Form/Search/Petition.tpl
 msgid "Add Petition"
@@ -793,18 +872,10 @@ msgid "Search Petitions"
 msgstr "Petitionen suchen"
 
 #: templates/CRM/Campaign/Form/Search/Survey.tpl
-msgid "No surveys found."
-msgstr "Keine Befragung gefunden."
-
-#: templates/CRM/Campaign/Form/Search/Survey.tpl
 #: templates/CRM/Campaign/Page/Petition.tpl
 #: templates/CRM/Campaign/Page/Survey.tpl
 msgid "Add Survey"
 msgstr "Befragung hinzufügen"
-
-#: templates/CRM/Campaign/Form/Search/Survey.tpl
-msgid "Survey ID"
-msgstr "<b>Umfrage</b> ID"
 
 #: templates/CRM/Campaign/Form/Search/Survey.tpl
 msgid "Survey Type ID"
@@ -956,8 +1027,10 @@ msgstr "Interviewpartner zu einer neuen Gruppe hinzufügen"
 
 #: templates/CRM/Campaign/Form/addCampaignToComponent.hlp
 msgid ""
-"Your organization can use Campaigns to track all constituent interactions related to a particular fund-raising or engagement effort. You can link\n"
-"activities, contributions, event participation, mailings, membership signups, and pledges to a particular campaign."
+"Your organization can use Campaigns to track all constituent interactions "
+"related to a particular fund-raising or engagement effort. You can link "
+"activities, contributions, event participation, mailings, membership "
+"signups, and pledges to a particular campaign."
 msgstr ""
 
 #: templates/CRM/Campaign/Form/addCampaignToComponent.tpl
@@ -970,13 +1043,9 @@ msgstr "Zur Zeit gibt es keine aktiven Kampagnen"
 
 #: templates/CRM/Campaign/Form/addCampaignToComponent.tpl
 msgid ""
-"If you want to associate this record with a campaign, you can <a "
-"href=\"%1\">create a campaign here</a>."
-msgstr ""
-
-#: templates/CRM/Campaign/Page/Campaign.tpl
-msgid "No Campaigns found."
-msgstr "Keine Kampagnen gefunden."
+"If you want to associate this record with a campaign, you can <a %1>create a"
+" campaign here</a>."
+msgstr "Wenn Sie diesen Datensatz mit einer Kampagne verknüpfen möchte, können Sie <a %1>hier eine anlegen</a>."
 
 #: templates/CRM/Campaign/Page/Petition/Confirm.tpl
 msgid ""
@@ -1050,178 +1119,18 @@ msgstr "Maximale Anzahl an Kontakten"
 msgid "Default Number Of Contacts"
 msgstr "Standardanzahl an Kontakten"
 
-#: templates/CRM/Campaign/Page/Petition.tpl
-#: templates/CRM/Campaign/Page/Survey.tpl
-msgid "No survey found."
-msgstr "Keine Befragung gefunden."
-
 #: templates/CRM/Campaign/Page/SurveyType.tpl
 msgid "There are no survey type entered. You can <a href='%1'>add one</a>."
 msgstr ""
 
-#: CRM/Campaign/DAO/Campaign.php
-msgid "Campaign External ID"
+#: CRM/Campaign/DAO/CampaignGroup.php
+msgid "Campaign Group ID"
 msgstr ""
 
-#: CRM/Campaign/DAO/Survey.php
-msgid "Survey Campaign ID"
+#: CRM/Campaign/DAO/CampaignGroup.php
+msgid "Campaign Group Type"
 msgstr ""
 
-#: CRM/Campaign/DAO/Survey.php
-msgid "Follow up Interval"
-msgstr ""
-
-#: CRM/Campaign/DAO/Survey.php
-msgid "Survey Hold Duration"
-msgstr ""
-
-#: CRM/Campaign/DAO/Survey.php
-msgid "Survey Is Active"
-msgstr ""
-
-#: CRM/Campaign/DAO/Survey.php
-msgid "Is Default Survey"
-msgstr ""
-
-#: CRM/Campaign/DAO/Survey.php
-msgid "Survey Created By"
-msgstr ""
-
-#: CRM/Campaign/DAO/Survey.php
-msgid "Survey Modified"
-msgstr ""
-
-#: CRM/Campaign/DAO/Survey.php
-msgid "Survey Modified On"
-msgstr ""
-
-#: CRM/Campaign/DAO/Survey.php
-msgid "No Email Verification"
-msgstr ""
-
-#: templates/CRM/Campaign/Form/addCampaignToComponent.tpl
-msgid ""
-"If you want to associate this record with a campaign, you can <a %1>create a"
-" campaign here</a>."
-msgstr ""
-
-#: CRM/Campaign/BAO/Petition.php
-msgid "Petition Id and/or Activity Id is not of the type Positive."
-msgstr ""
-
-#: CRM/Campaign/Form/Task/Release.php
-msgid "Respondent has been released."
-msgid_plural "%count respondents have been released."
-msgstr[0] ""
-msgstr[1] ""
-
-#: CRM/Campaign/Form/Task/Release.php
-msgid "Released"
-msgstr ""
-
-#: CRM/Campaign/Form/Task/Release.php
-msgid "1 respondent did not release."
-msgid_plural "%count respondents did not release."
-msgstr[0] ""
-msgstr[1] ""
-
-#: CRM/Campaign/Form/Task/Reserve.php
-msgid "You can reserve a maximum of %count contact at a time for this survey."
-msgid_plural ""
-"You can reserve a maximum of %count contacts at a time for this survey."
-msgstr[0] ""
-msgstr[1] ""
-
-#: CRM/Campaign/Form/Task/Reserve.php
-msgid "%count contact has been reserved."
-msgid_plural "%count contacts have been reserved."
-msgstr[0] ""
-msgstr[1] ""
-
-#: CRM/Campaign/Form/Task/Reserve.php
-msgid "They have been added to %1."
-msgstr ""
-
-#: CRM/Campaign/Form/Task/Reserve.php
-msgid "Reservation did not add for %count contact."
-msgid_plural "Reservation did not add for %count contacts."
-msgstr[0] ""
-msgstr[1] ""
-
-#: CRM/Campaign/Info.php
-msgid "administer CiviCampaign"
-msgstr ""
-
-#: CRM/Campaign/Info.php
-msgid "Create new campaign, survey and petition types and their status"
-msgstr ""
-
-#: CRM/Campaign/Info.php
-msgid "manage campaign"
-msgstr ""
-
-#: CRM/Campaign/Info.php
-msgid "Create new campaigns, surveys and petitions, reserve respondents"
-msgstr ""
-
-#: CRM/Campaign/Info.php
-msgid "reserve campaign contacts"
-msgstr ""
-
-#: CRM/Campaign/Info.php
-msgid "Reserve campaign contacts for surveys and petitions"
-msgstr ""
-
-#: CRM/Campaign/Info.php
-msgid "release campaign contacts"
-msgstr ""
-
-#: CRM/Campaign/Info.php
-msgid "Release reserved campaign contacts for surveys and petitions"
-msgstr ""
-
-#: CRM/Campaign/Info.php
-msgid "interview campaign contacts"
-msgstr ""
-
-#: CRM/Campaign/Info.php
-msgid "Record survey and petition responses from their reserved contacts"
-msgstr ""
-
-#: CRM/Campaign/Info.php
-msgid "GOTV campaign contacts"
-msgstr ""
-
-#: CRM/Campaign/Info.php
-msgid "Record that contacts voted"
-msgstr ""
-
-#: CRM/Campaign/Info.php
-msgid "sign CiviCRM Petition"
-msgstr ""
-
-#: CRM/Campaign/Page/DashBoard.php
-msgid "1 Day"
-msgid_plural "%count Days"
-msgstr[0] ""
-msgstr[1] ""
-
-#: templates/CRM/Campaign/Form/Petition/Signature.tpl
-msgid ""
-"You have already signed this petition but you still <b>need to verify your "
-"email address</b>."
-msgstr "Sie haben diese Petition schon unterzeichnet, aber Sie <b>müssen immer noch Ihre E-Mail-Adresse bestätigen</b>."
-
-#: templates/CRM/Campaign/Form/Petition/Signature.tpl
-msgid ""
-"Please check your email inbox for the confirmation email. If you don't find "
-"it, verify if it isn't in your spam folder."
-msgstr "Suchen Sie bitte in Ihren E-Mail-Posteingang nach der Bestätigungs-E-Mail. Wenn Sie sie nicht finden, schauen Sie nach, ob sie nicht in Ihrem Junk-Ordner ist."
-
-#: templates/CRM/Campaign/Form/addCampaignToComponent.hlp
-msgid ""
-"Your organization can use Campaigns to track all constituent interactions "
-"related to a particular fund-raising or engagement effort. You can link "
-"activities, contributions, event participation, mailings, membership "
-"signups, and pledges to a particular campaign."
+#: templates/CRM/Campaign/Page/SurveyType.tpl
+msgid "There are no survey types entered. You can <a href='%1'>add one</a>."
 msgstr ""
