--- a/po/de_DE/countries.po
+++ b/po/de_DE/countries.po
@@ -5,7 +5,7 @@
 # Translators:
 # Alain Schaefer <alain.schaefer@gmail.com>, 2016
 # Detlev Sieber <detlev.sieber@foebud.org>, 2011
-# MichaSeidler <info@euroconsults.eu>, 2012
+# Michal Seidler, 2012
 # Malek <Irek@malek.de>, 2012
 # Martin Peth <peth@systopia.de>, 2013
 # Martin Peth <peth@systopia.de>, 2012
@@ -13,9 +13,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-06 02:40+0000\n"
-"Last-Translator: Alain Schaefer <alain.schaefer@gmail.com>\n"
+"POT-Creation-Date: 2016-05-08 17:05-0400\n"
+"PO-Revision-Date: 2016-05-08 22:32+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
