--- a/po/de_DE/extension.po
+++ b/po/de_DE/extension.po
@@ -12,9 +12,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-08 09:03+0000\n"
-"Last-Translator: Fabian <schuttenberg@systopia.de>\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:11+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -30,11 +30,6 @@ msgstr "Ins Verzeichnis kann nicht geschrieben werden"
 msgid ""
 "Your extensions cache directory (%1) is not web server writable. Please go "
 "to the <a href=\"%2\">path setting page</a> and correct it.<br/>"
-msgstr ""
-
-#: CRM/Extension/Browser.php
-msgid ""
-"Not checking remote URL for extensions since ext_repo_url is set to false."
 msgstr ""
 
 #: CRM/Extension/Browser.php
@@ -57,10 +52,6 @@ msgid ""
 "compatible, you may be able to <a href=\"%3\">download and install "
 "extensions manually</a> (depending on access to your web server).<br />"
 msgstr "Es gibt aktuell keine Erweiterungen im öffentlichen CiviCRM-Erweiterungsverzeichnis, die mit der Version %2 kompatibel sind (<a href=\"%1\">Erweiterungen wurden hier abgerufen</a>). Wenn Sie eine Erweiterung installieren möchten, die als nicht kompatibel markiert ist, können Sie die <a href=\"%3\">Erweiterung downloaden und manuell installieren</a> (abhängig vom Zugriff auf Ihren Webserver)."
-
-#: CRM/Extension/Browser.php
-msgid "No Extensions Available for this Version"
-msgstr "Für diese Version gibt es keine Extensions"
 
 #: CRM/Extension/Container/Basic.php CRM/Extension/Container/Default.php
 msgid "Invalid Base Directory"
@@ -118,6 +109,13 @@ msgid ""
 msgstr ""
 
 #: CRM/Extension/Downloader.php
+msgid ""
+"WARNING: The downloader may be unable to download files which require HTTP "
+"redirection. This may be a configuration issue with PHP's open_basedir or "
+"safe_mode."
+msgstr ""
+
+#: CRM/Extension/Downloader.php
 msgid "Unable to extract the extension: bad directory structure"
 msgstr ""
 
@@ -161,9 +159,13 @@ msgid ""
 "will be preserved, but the new copy will be used."
 msgstr ""
 
-#: CRM/Extension/Downloader.php
+#: CRM/Extension/Manager.php
+msgid "Selected option value has been deleted."
+msgstr ""
+
+#: CRM/Extension/Browser.php
 msgid ""
-"WARNING: The downloader may be unable to download files which require HTTP "
-"redirection. This may be a configuration issue with PHP's open_basedir or "
-"safe_mode."
+"The CiviCRM public extensions directory at %1 could not be contacted - "
+"please check your webserver can make external HTTP requests or contact "
+"CiviCRM team on <a href=\"http://forum.civicrm.org/\">CiviCRM forum</a>."
 msgstr ""
